# Cordia

./: .env~  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  sync.py
cordia/: cordia_client.py  web_server.py
cordia/cogs/: cordia.py  util.py
cordia/dao/: achievement_dao.py  boss_instance_dao.py  daily_leaderboard_dao.py  gear_dao.py  item_dao.py  market_item_dao.py  player_dao.py  player_gear_dao.py
cordia/data/: achievements.py  bosses.py  gear.py  gear_sets.py  items.py  locations.py  monsters.py  shop_items.py  spells.py
cordia/model/: achievement.py  achievement_instance.py  attack_result.py  boos_fight_result.py  boss_instance.py  daily_leaderboard.py  gear.py  gear_instance.py  item.py  item_instance.py  location.py  market_item.py  monster.py  player.py  player_gear.py  player_stats.py  shop_item.py  spells.py
cordia/service/: achievement_service.py  battle_service.py  boss_service.py  cooldown_service.py  cordia_service.py  gear_service.py  item_service.py  leaderboard_service.py  loot_service.py  market_service.py  player_service.py  vote_service.py
cordia/util/: battle_util.py  constants.py  decorators.py  errors.py  exp_util.py  gear_util.py  interaction_util.py  stat_mapping.py  stats_util.py  text_format_util.py
cordia/view/: battle_view.py  buy_market_item_modal.py  confirmation_modal.py  cordia_view.py  location_select.py  (+2 more)
psql/: docker-compose.yml  env.py
scripts/: sync.py
tests/: test_achievement_data.py  test_gear_data.py  test_item_data.py  test_location_data.py  test_monster_data.py  test_shop_item_data.py
(+42 files in other folders)
